# poco

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  Doxyfile  Makefile  README.md  REUSE.toml
.github/workflows/: documentation.yml  ubuntu.yml  windows.yml
LICENSES/: MIT.txt
docs/: conf.py  events.rst  extending.rst  general-usage.md  general.rst  index.rst  mutex.rst  operation.rst  platform.md  queues.rst  quick-start.rst  requirements.txt  result-codes.md  scheduler-choice.md  semaphore.rst  streams.rst
docs/_gen/file/: context_8h.rst  coro_8h.rst  coro__raw_8h.rst  intracoro_8h.rst  mutex_8h.rst  poco_8h.rst  queue_8h.rst  queue__raw_8h.rst  result_8h.rst  round__robin_8h.rst  scheduler_8h.rst  semaphore_8h.rst
docs/guide/: general.rst  streams.rst
docs/tutorials/: hello-world.rst
include/: CMakeLists.txt
include/poco/: context.h  coro.h  coro_raw.h  error.h  event.h  intercoro.h  intracoro.h  mutex.h  poco.h  queue.h  queue_raw.h  result.h  scheduler.h  semaphore.h  stream.h
include/poco/scheduler/: basic_scheduler.h
include/poco/schedulers/: round_robin.h
platform/: CMakeLists.txt  README.md
platform/armv7-m/: CMakeLists.txt  platform.c
platform/armv7-m/poco/: platform.h
platform/unix/: CMakeLists.txt
platform/unix/poco/: platform.h
platform/windows/: CMakeLists.txt  platform.c
platform/windows/poco/: platform.h
platform/zephyr-armv7-m/: CMakeLists.txt  README.md  platform.c  platform_asm.s
platform/zephyr-armv7-m/poco/: platform.h
samples/: CMakeLists.txt
samples/aggregate-wait/: CMakeLists.txt  consumer.c  consumer.h  sample_aggregate_wait.c
samples/coro-joining/: CMakeLists.txt  sample_coro_joining.c
samples/custom-primitive/: CMakeLists.txt  observable_u32.c  observable_u32.h  sample_custom_primitive.c
samples/hello-world/: CMakeLists.txt  sample_hello.c
samples/multiple-coroutines/: CMakeLists.txt  sample_multiple_coroutines.c
samples/mutex/: CMakeLists.txt  sample_mutex.c
samples/queue/: CMakeLists.txt  sample_queue.c
samples/queue-overflow/: CMakeLists.txt  sample_queue_overflow.c
samples/readme-sample/: CMakeLists.txt  main.c
samples/semaphore/: CMakeLists.txt  sample_semaphore.c
samples/simple-event/: CMakeLists.txt  sample_simple_event.c
samples/stream/: CMakeLists.txt  sample_stream.c
src/: CMakeLists.txt  context.c  coro.c  event.c  mutex.c  queue.c  scheduler.c  semaphore.c  stream.c
src/scheduler/: CMakeLists.txt  basic_scheduler.c  round_robin.c
tests/: CMakeLists.txt  capture_stdout.sh  cmocka_coro_helper.c  cmocka_coro_helper.h  test_event.c  test_event_alloc.c  test_output.bat  test_output.sh  test_queue.c  test_sample_aggregate_wait.expected  test_sample_coro_joining.expected  test_sample_custom_primitive.expected  test_sample_mutex.expected  test_sample_queue.expected  test_sample_queue_overflow.expected  test_sample_semaphore.expected  test_sample_simple_event.expected  test_sample_stream.expected
