# SPDX-FileCopyrightText: Copyright contributors to the poco project.
# SPDX-License-Identifier: MIT

add_subdirectory(aggregate-wait)
add_subdirectory(coro-joining)
add_subdirectory(custom-primitive)
add_subdirectory(hello-world)
add_subdirectory(multiple-coroutines)
add_subdirectory(mutex)
add_subdirectory(queue)
add_subdirectory(queue-overflow)
add_subdirectory(readme-sample)
add_subdirectory(semaphore)
add_subdirectory(simple-event)
add_subdirectory(stream)
